# pleno-anonymize

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  flake.nix  fly.toml  pyproject.toml
.github/workflows/: canary-release.yml  ci.yml  release.yml  website.yml
app/: app.py  pyproject.toml  recognizers_ja.py
app/scripts/: setup_model.sh
app/server/: app.py  recognizers_ja.py
app/tests/: conftest.py  test_e2e_anonymize.py  test_recognizers_ja.py
app/website/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
app/website/public/: openapi.json
app/website/src/pages/: BenchmarkPage.tsx  HomePage.tsx  PlaygroundPage.tsx  PrivacyPage.tsx
docs/adr/: 0004-custom-ja-ner-model.md
models/ja_ner_ja-0.1.0/: README.md
models/ja_ner_ja-0.1.0/ja_ner_ja/: meta.json
scripts/: setup_model.sh
server/: config.cfg  pyproject.toml
server/src/: app.py
server/tests/: conftest.py  test_adversarial_ner.py
website/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
website/public/: openapi.json
website/public/.well-known/: security.txt
website/src/: App.tsx  index.css  scores.d.ts
website/src/components/: Footer.tsx
website/src/pages/: BenchmarkPage.tsx  DocsPage.tsx  HomePage.tsx  TermsPage.tsx
