[project]
name = "pleno-anonymize-app"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "httpx>=0.27.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "openai>=1.0.0",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "presidio-image-redactor>=0.0.53",
    "pillow>=10.0.0",
    "spacy[ja]>=3.8",
    "uvicorn[standard]>=0.35.0",
    "scalar-fastapi>=1.6.0",
]
